test/modules/standard/FileSystem/filerator/bradc/testemptyglob.good
testemptyglob.chpl:18: error: halt reached - glob() is being zipped with something too big; it only has 0 matches
